--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   cached_network_image: ^3.2.3
   equatable: ^2.0.5
+  date_time_format: ^2.0.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
