--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   equatable: ^2.0.5
   date_time_format: ^2.0.1
   intl: ^0.18.1
+  pocketbase: ^0.16.0
 
 dev_dependencies:
   flutter_test:
