--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   loading_indicator: ^3.1.1
   lottie: ^2.7.0
   flutter_animate: ^4.3.0
+  animated_theme_switcher: ^2.0.10
+  day_night_switcher: ^0.2.0+1
+  google_fonts: ^6.1.0
+
 
 dev_dependencies:
   flutter_test:
