--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   animated_theme_switcher: ^2.0.10
   day_night_switcher: ^0.2.0+1
   google_fonts: ^6.1.0
+  flutter_bounce: ^1.1.0
 
 
 dev_dependencies:
