--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
-        android:label="danter"
+        android:label="Danter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-        android:requestLegacyExternalStorage="true"
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
