--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,10 +51,11 @@ dependencies:
   flutter_animate: ^4.3.0
   animated_theme_switcher: ^2.0.10
   
-  google_fonts: ^6.1.0
+  
   flutter_bounce: ^1.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  google_fonts: 6.1.0
  
 
 
